--- a/m/busi/term-param.html
+++ b/m/busi/term-param.html
@@ -216,7 +216,7 @@
                 if (data.errcode == 0) {
                     success(data.rows);
                 } else {
-                    weui.alert(data.errmsg, error, {
+                    weui.alert(data.errmsg, {
                         title: '提示'
                     });
                 }
