--- a/m/busi/term-term-param-rel.html
+++ b/m/busi/term-term-param-rel.html
@@ -134,9 +134,7 @@
                 if (data.errcode == 0) {
                     success(data.rows);
                 } else {
-                    weui.alert(data.errmsg, function () {
-                        error();
-                    }, { title: '提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {
