--- a/m/tab-workorder.html
+++ b/m/tab-workorder.html
@@ -39,7 +39,7 @@
             <i class="icon-list"></i>
             <p class="weui-tabbar__label">工作台</p>
         </a>
-        <a href="tab-my.html" class="weui-tabbar__item">
+        <a href="my.html" class="weui-tabbar__item">
             <!-- <img src="../images/icon_nav_cell.png" alt="" class="weui-tabbar__icon"> -->
             <i class="icon-my"></i>
             <p class="weui-tabbar__label">我</p>
