--- a/m/my.html
+++ b/m/my.html
@@ -121,7 +121,7 @@
                 <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">通讯录</p>
             </a-->
-            <a href="javascript:;" class="weui-tabbar__item">
+            <a href="tab-workorder.html" class="weui-tabbar__item">
                 <i class="icon-list"></i>
                 <p class="weui-tabbar__label">工作台</p>
             </a>
