--- a/m/tab-workorder.html
+++ b/m/tab-workorder.html
@@ -34,7 +34,7 @@
             <i class="icon-home"></i>
             <p class="weui-tabbar__label">首页</p>
         </a>
-        <a href="tab-workorder.html" class="weui-tabbar__item  weui-bar__item_on">
+        <a href="javascript:;" class="weui-tabbar__item  weui-bar__item_on">
             <!-- <img src="../images/icon_nav_article.png" alt="" class="weui-tabbar__icon"> -->
             <i class="icon-list"></i>
             <p class="weui-tabbar__label">工作台</p>
