--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -51,7 +51,7 @@
                         <label class="weui-label">商户类型</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <select class="weui-select" name="mchnt_type" missingTips="请选择证件类型">
+                        <select class="weui-select" name="mchnt_type" missingTips="请选择商户类型">
                             <option value="1">企业</option>
                             <option value="2">个人</option>
                             <option value="9">其他</option>
