--- a/m/index.html
+++ b/m/index.html
@@ -32,6 +32,12 @@
                     </div>
                     <p class="weui-grid__label">存量开通业务</p>
                 </a> -->
+                <a href="busi/quick-enter-info.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_article.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">新商户入网2</p>
+                </a>
                 <a href="busi/mchnt-base-info.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_button.png" alt="">
