--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -305,7 +305,7 @@
 			else if($(element).hasClass('busi'))
 				$.extend(data.busi, {tag: value});
 		});
-		$.extend(data.busi, {acq_inst_id: acq_inst_id, busi_type: busi_type};
+		$.extend(data.busi, {acq_inst_id: acq_inst_id, busi_type: busi_type});
 		return data;
 	}
     function onSubmit() {
