--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -257,7 +257,7 @@
                 
             </div>
             <div class="weui-btn-area btn-area">
-                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.show('#page2');">返回</a>
+                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.show('#page2');weui.page.hide('#detail-page');">返回</a>
                 <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">下一步</a>
             </div>
         </form>
@@ -269,7 +269,7 @@
     <script type="text/javascript" src="../js/param.js"></script>
     <script id="list-template" type="text/html">
         {{each rows as row i}}
-        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;backgroud-color:blue">
+        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;background-color:blue">
             <div class="weui-cell__bd weui-cell_primary">
                 <p>
                     {{row.busi_type_nm}}
@@ -281,7 +281,7 @@
     </script>
     <script id="acq-template" type="text/html">
         {{each rows as row i}}
-        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;backgroud-color:blue">
+        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;background-color:blue">
             <div class="weui-cell__bd weui-cell_primary">
                 <p>
                     {{row.acq_inst_nm}}
@@ -297,7 +297,7 @@
 		
 	function serializeForm(form) {
 		var data = {};
-		$(form).find('.base,.busi').each(index, function(element) {
+		$(form).find('.base,.busi').each(function(element) {
 			var tag = $(element).attr('name');
 			var value = $(element).val();
 			if($(element).hasClass('base'))
@@ -420,6 +420,7 @@
 		loader: SearchAcq,
 		onClickItem: function(row) {
 			weui.page.show('#page1');
+			weui.page.hide('#page2');
 			acq_inst_id = row.acq_inst_id;
 			weui.searchPage('#page1', {
 				resultTpl: '#list-template',
@@ -430,6 +431,7 @@
 				onClickItem: function(row) {
 					busi_type = row.busi_type;
 					weui.page.show('#detail-page');
+					weui.page.hide('#page1');
 				}
 			}).search()
         }
