--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -269,7 +269,7 @@
     <script type="text/javascript" src="../js/param.js"></script>
     <script id="list-template" type="text/html">
         {{each rows as row i}}
-        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;background-color:#22c2ff">
+        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;background-color:#22efff;margin-bottom:10px">
             <div class="weui-cell__bd weui-cell_primary">
                 <p>
                     {{row.busi_type_nm}}
@@ -281,7 +281,7 @@
     </script>
     <script id="acq-template" type="text/html">
         {{each rows as row i}}
-        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;background-color:#22c2ff">
+        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}" style="height:80px;background-color:#22efff;margin-bottom:10px">
             <div class="weui-cell__bd weui-cell_primary">
                 <p>
                     {{row.acq_inst_nm}}
@@ -399,6 +399,7 @@
 		
 	function SearchBusi(param, success, error) {
 		console.log(arguments);
+		alert($('#page1').find('.searchbar-result__item').length);
 		if($('#page1').find('.searchbar-result__item').length == 0) {
 			$$.request('/action/bm/acq-inst-busi/list', {
 				acq_inst_id: acq_inst_id
