--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -329,7 +329,7 @@
 						mchnt_id: data.mchnt_id,
 						mchnt_param_id: data.mchnt_param_id
 					};
-					windows.location.href = 'quick-enter-elec.html?' + $.param(data);
+					window.location.href = 'quick-enter-elec.html?' + $.param(data);
                 } else {
                     weui.alert(data.errmsg, {
                         title: '提示'
