--- a/m/index.html
+++ b/m/index.html
@@ -20,11 +20,17 @@
     <div class="weui-tab">
         <div class="weui-tab__panel">
             <div class="weui-grids">
+                <a href="busi/quick-enter-info.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_article.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">商户入网(新入口)</p>
+                </a>
                 <a href="busi/steps/base.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_article.png" alt="">
                     </div>
-                    <p class="weui-grid__label">新商户入网</p>
+                    <p class="weui-grid__label">商户入网(老入口)</p>
                 </a>
                 <!-- <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
@@ -32,12 +38,6 @@
                     </div>
                     <p class="weui-grid__label">存量开通业务</p>
                 </a> -->
-                <a href="busi/quick-enter-info.html" class="weui-grid">
-                    <div class="weui-grid__icon">
-                        <img src="images/icon_nav_article.png" alt="">
-                    </div>
-                    <p class="weui-grid__label">新商户入网2</p>
-                </a>
                 <a href="busi/mchnt-base-info.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_button.png" alt="">
@@ -62,12 +62,12 @@
                     </div>
                     <p class="weui-grid__label">&nbsp;</p>
                 </a>
-                <a href="javascript:;" class="weui-grid">
+                <!--a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
                     </div>
                     <p class="weui-grid__label">&nbsp;</p>
-                </a>
+                </a-->
             </div>
         </div>
         <div class="weui-tabbar">
