--- a/m/index.html
+++ b/m/index.html
@@ -24,13 +24,13 @@
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_article.png" alt="">
                     </div>
-                    <p class="weui-grid__label">商户入网(新入口)</p>
+                    <p class="weui-grid__label">商户入网(新)</p>
                 </a>
                 <a href="busi/steps/base.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_article.png" alt="">
                     </div>
-                    <p class="weui-grid__label">商户入网(老入口)</p>
+                    <p class="weui-grid__label">商户入网(老)</p>
                 </a>
                 <!-- <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
