--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -28,7 +28,7 @@
             </form>
             <a href="javascript:" class="weui-search-bar__cancel-btn">取消</a>
         </div>
-        <div class="weui-cells__title">产品列表</div>
+        <div class="weui-cells__title"><i class="icon-return" onClick="weui.page.back()"></i>产品列表</div>
         <div class="weui-cells searchbar-result">
             
         </div>
@@ -84,7 +84,7 @@
                         <label class="weui-label">手机号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input base" type="text" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
+                        <input class="weui-input base" type="number" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -143,7 +143,7 @@
                         <label class="weui-label">终端数量<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input base" type="text" name="term_num" required="" placeholder="请输入终端数量">
+                        <input class="weui-input base" type="number" name="term_num" required="" placeholder="请输入终端数量">
                     </div>
                 </div>
                 <div class="weui-cell weui-cell_select weui-cell_select-after">
@@ -169,7 +169,7 @@
                         <label class="weui-label">证件号码<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input base" type="text" name="cert_id" required="" placeholder="请输入证件号码" validType="idnum" invalidTips="请输入有效的证件号码">
+                        <input class="weui-input base" type="number" name="cert_id" required="" placeholder="请输入证件号码" validType="idnum" invalidTips="请输入有效的证件号码">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -212,7 +212,7 @@
                         <label class="weui-label">手续费</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input busi" name="fee" type="text" required="" pattern="^\d+\.?\d*$" placeholder="当面付扫码类必填" invalidTips="请输入正确的手续费">
+                        <input class="weui-input busi" name="fee" type="number" required="" pattern="^\d+\.?\d*$" placeholder="当面付扫码类必填" invalidTips="请输入正确的手续费">
                     </div>
                     <div class="weui-cell__ft">
                         <button class="weui-vcode-btn">‰</button>
@@ -251,7 +251,7 @@
                         <label class="weui-label">银行账号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input busi" type="text" name="account_no" required="" placeholder="请输入银行账号" style="font-weight:bold; font-size:20px; color: red;">
+                        <input class="weui-input busi" type="number" name="account_no" required="" placeholder="请输入银行账号" style="font-weight:bold; font-size:20px; color: red;">
                     </div>
                 </div>
                 
